--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
 <body>
     <h1>Glance API Website</h1>
     <p>This is the homepage for public facing Glance API documentation.</p>
+
+        <nav>
+        <a href="portal.html">Portal</a> |
+        <a href="reporting.html">Reporting</a> |
+        <a href="users.html">Users</a>
+    </nav>
 </body>
 </html>
