--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <img src="https://help.glance.cx/images/logo.svg" alt="Glance logo">
+    <img src="https://help.glance.cx/images/logo.svg" width="300" height="150" alt="Glance logo">
     <h1>Glance API Website</h1>
     <p>This is the homepage for public facing Glance API documentation.</p>
 
