--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 </head>
 <body>
     <img src="https://help.glance.cx/images/logo.svg" width="300" height="150" alt="Glance logo"> <br>
-    <img src="https://help.glance.cx/images/Glance-Banner.png" width="600" height="15" alt="Glance logo">
+
     <h1>Glance API Website</h1>
     <p>This is the homepage for public facing Glance API documentation.</p>
+    
+    <img src="https://help.glance.cx/images/Glance-Banner.png" width="600" height="15" alt="Glance logo">
+
+    <p><a href="portal.html">Portal</a></p>
 
         <nav>
         <a href="portal.html">Portal</a> |
