--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
     
     <img src="https://help.glance.cx/images/Glance-Banner.png" width="600" height="15" alt="Glance logo">
 
-    <p><a href="portal.html">Portal</a></p>
-
+    <p><a href="portal.html">Portal</a></p
+    <p><a href="reporting.html">Reporting</a></p>
+    <p><a href="users.html">Users</a></p>
+    
+    <img src="https://help.glance.cx/images/Glance-Banner.png" width="600" height="15" alt="Glance logo">
         <nav>
-        <a href="portal.html">Portal</a> |
-        <a href="reporting.html">Reporting</a> |
-        <a href="users.html">Users</a>
+        <a href="https://developer.glance.cx/">Glance Developer Center</a> |
+        <a href="https://help.glance.cx/">Glance Help Site</a>
     </nav>
 </body>
 </html>
