--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img src="https://help.glance.cx/images/logo.svg" width="300" height="150" alt="Glance logo"> <br>
 
     <h1>Glance API Website</h1>
-    <p>This is the homepage for public facing Glance API documentation.</p>
+    <p>This is the homepage for Glance API documentation.</p>
     
     <img src="https://help.glance.cx/images/Glance-Banner.png" width="600" height="15" alt="Glance logo">
 
